@@ -138,7 +138,7 @@ void KFileSimpleView::paintCell( QPainter *p, int row, int col)
 	p->setPen( kapp->windowTextColor );
 
     if (index < count()) {
-	p->drawPixmap(0, 0, *pixmaps.at(index));
+	p->drawPixmap(0, 1, *pixmaps.at(index));
 	p->drawText(3 + pixmaps.at(index)->width(), 15, text(index));
     }
 }
